<resources>
    <string name="app_name">HackathonAutumn2022</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="tasks">Задачи</string>
    <string name="settings">Настройки</string>
    <string name="main">Главная</string>
    <string name="fire_icon">🔥</string>
    <string name="not_started">Не начата</string>
    <string name="in_progress">В работе</string>
    <string name="failed">Провалена</string>
    <string name="finished">Завершена</string>
    <string name="error">Ошибка</string>
    <string name="login_or_pwd_fail">Введен неверный логин или пароль</string>
    <string name="Ok">Ок</string>
</resources>