<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.auth.AuthFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/authorization"
            android:textSize="32sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/login" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwdEditText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/regButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>